GPU Subdivision breaks auto selection in UV edit mode #98773

Closed
opened 2022-06-10 19:06:45 +02:00 by Levente Kozák · 21 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: (newest version of Blender that worked as expected)

Short description of error
GPU Subdivision breaks auto selection in UV edit mode
It does not break selection competely, after switching into object mode, and back into edit mode, selection is as it should be.

Exact steps for others to reproduce the error
New file
Select default cube
add subdivision modifier
Go to UV editing
ERROR: Selecing faces does not update UV view.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: (newest version of Blender that worked as expected) **Short description of error** GPU Subdivision breaks auto selection in UV edit mode It does not break selection competely, after switching into object mode, and back into edit mode, selection is as it should be. **Exact steps for others to reproduce the error** New file Select default cube add subdivision modifier Go to UV editing ERROR: Selecing faces does not update UV view.
Author

Added subscriber: @Levgon

Added subscriber: @Levgon
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report.

Object with unconnected parts breaks auto selection in UV edit mode

Is it really necessary? I'm seeing same issue with single cube also.

Hi, thanks for the report. > Object with unconnected parts breaks auto selection in UV edit mode Is it really necessary? I'm seeing same issue with single cube also.
Levente Kozák changed title from GPU Subdivision of Object with unconnected parts breaks auto selection in UV edit mode to GPU Subdivision breaks auto selection in UV edit mode 2022-06-11 20:51:06 +02:00
Author

Right now as I try to, yes, it seems to be broken with one cube too.
I possibly did something wrong but I could have sworn a single cube was not broken yesterday :)

Right now as I try to, yes, it seems to be broken with one cube too. I possibly did something wrong but I could have sworn a single cube was not broken yesterday :)
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I think I cant reproduce this (or I am misunderstanding the repro steps)

@PratikPB2123 : is this a regression?

I think I cant reproduce this (or I am misunderstanding the repro steps) @PratikPB2123 : is this a regression?
Member

No, not a regression (but I'll check again just to be sure)
@lichtwerk , can you confirm with these steps?:

  • Open default scene
  • Switch to UV editing workspace (Switch to face selection mode- optional)
  • Deselect faces
  • Add Subdivision surface modifier (Make sure GPU subdiv is enabled)
  • Select face in viewport (Selection is missing in UV editing)
No, not a regression (but I'll check again just to be sure) @lichtwerk , can you confirm with these steps?: - Open default scene - Switch to UV editing workspace (Switch to face selection mode- optional) - Deselect faces - Add Subdivision surface modifier (Make sure GPU subdiv is enabled) - Select face in viewport (Selection is missing in UV editing)
Member

In #98773#1373482, @PratikPB2123 wrote:
No, not a regression (but I'll check again just to be sure)
@lichtwerk , can you confirm with these steps?:

hm, not really

> In #98773#1373482, @PratikPB2123 wrote: > No, not a regression (but I'll check again just to be sure) > @lichtwerk , can you confirm with these steps?: hm, not really

This issue was referenced by e2c02655c7

This issue was referenced by e2c02655c78b2c669468ae568ddf4b17953cc98d

This issue was referenced by 6c3965c027

This issue was referenced by 6c3965c0271ce9cc9ed2833200bd6b1c131d7911

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-06-22 16:46:08 +02:00

This issue was referenced by 1b54fd391e

This issue was referenced by 1b54fd391e5b2a8fbf9183df8caa15a8a5cb81d2

This issue was referenced by fb42c5838c

This issue was referenced by fb42c5838c0640f51da8ab2deb94a05cc696997c

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Reopening since the fix was reverted.

Reopening since the fix was reverted.

Not sure this is high priority, but since we previously had a fix will mark it as such so we remember to at least look at this again.

Not sure this is high priority, but since we previously had a fix will mark it as such so we remember to at least look at this again.

This issue was referenced by 8cf52e8226

This issue was referenced by 8cf52e8226cbb0a0fa07d674ce179e3172351b99

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98773
No description provided.